@@ -1,4 +1,5 @@
 DIST 389-ds-console-1.2.0.tar.bz2 784763 RMD160 e9dca6b39fdec45f20e353edc99a0d048e522521 SHA1 403c493f69b94747ea9078799a1f871b71a71d73 SHA256 7db936ec197d066d286305d59294307242ab2786eb866d86411f5a64e04ab408
+EBUILD 389-ds-console-1.2.0-r1.ebuild 1885 RMD160 9331a82ff05add79f3e206b4957b976d6c385a92 SHA1 48478a78316926d6356d84c425ae756f5af1e882 SHA256 1e1715f2e04a8af98e912344377944dc9e19ff645e8ff5795593ee7797fa096c
 EBUILD 389-ds-console-1.2.0.ebuild 1903 RMD160 c92a225f480ebb1433607af30fafe20e2db37380 SHA1 888665445c213be2218dad7882b109acc35381a1 SHA256 61e0f2ec5e2c894801ce108f1a6640f14c9cd84a40d40ba2933dd0adb46784ff
-MISC ChangeLog 2187 RMD160 8de62e1bed0154567ac432c463453d62c13ccf57 SHA1 41f33750484e07df0c12fb510afd1595646009d4 SHA256 2aedd63b38934364ea9c330773bde5a5a75cd3f792acc6735f666436ae35ae81
+MISC ChangeLog 2308 RMD160 8ed0d81aecc0b4a75c4baac3f6799522739d82d8 SHA1 81b2e98074972c5b6b890827ace175b4ee8e9a65 SHA256 fedcdc6fa0740b6d369dca15cd71422dd1f4876964617ab43e0a0476ed2ad53c
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
