@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  +389-ds-console-1.2.0-r1.ebuild:
+  rewison bump - eapi 2 support
+
   15 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> ChangeLog:
   recommit in rion
 
